--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -40,7 +40,7 @@
 {% if messages %}
     {% for message in messages %}
         <div class="django-message" id="django-message">
-            <p>{{ message }}</p>
+            <p>{{ message|safe }}</p>
             <div class="center-container"><div class="blue-button" onclick="document.getElementById('django-message').style.display='none';">{% trans "OK!" %}</div></div>
         </div>
     {% endfor %}
