--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -20,7 +20,11 @@
                 {{ form.as_p }}
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ next }}">
-                <input type="submit" value="{% trans "Einloggen" %}">
+                <div style="display: flex; align-items: center">
+                    <input type="submit" value="{% trans "Einloggen" %}">
+                    <input class="blue-button" type="button" value="{% trans 'Gastzugang' %}" onclick=openLink("{% url 'account:guest_access' %}")>
+                </div>
+                
             </form>
         <div class="competitive" style="margin: 10px 0; font-size: 16px;">
             <div class="left" onclick=openLink("{% url 'account:password_reset' %}")>
