--- a/account/templates/registration/register.html
+++ b/account/templates/registration/register.html
@@ -15,8 +15,11 @@
     
     <p class="info-p">
         <strong>{% trans "Willkommen bei myactivities.net! :)" %}</strong><br><br>
-        {% trans "Finden Sie Hobbys und neue Freunde! Am besten geht das, wenn Sie auch Geschlecht und Alter angeben. Ihre E-Mail-Adresse wird ausschließlich für den Aktivierungslink und die Passwort-Zurücksetzung verwendet!" %}
+        {% trans "Finden Sie Hobbys und neue Freunde! Am besten geht das, wenn Sie auch Geschlecht und Alter angeben. Ihre E-Mail-Adresse wird ausschließlich für den Aktivierungslink und die Passwort-Zurücksetzung verwendet." %}
     </p>
+    <div class="info-p" style="font-weight: bold; color: yellow">
+        {% trans 'Die Daten Ihres Gastaccounts bleiben nach der Registrierung erhalten.' %}
+    </div>
     <form class="login-form" method="post" enctype="multipart/form-data">
         {{ user_form.as_p }}
         {% csrf_token %}
