--- a/account/templates/account/sidemenu.html
+++ b/account/templates/account/sidemenu.html
@@ -36,10 +36,9 @@
         'categories': ['/activity/category'],
         'competitions': ['/multiplayer', '/competitions'],
         'groups': ['/usergroups'],
-        //'chat': ['/chat'],
         'vacancies': ['/vacancies'],
         'friends': ['/account/friend', '/account/people_list'],
-        'edit': ['/account/edit', '/account/password_change', '/account/delete'],
+        'edit': ['/account/edit', '/account/password_change', '/account/delete', '/account/register'],
         'character': ['/character']
     }
     if(location.pathname == '/account/' || location.pathname == "/") {
