--- a/account/static/css/base7.css
+++ b/account/static/css/base7.css
@@ -1662,6 +1662,32 @@ td {
     .topmenu .logo .icon {
         display: block;
     }
+    
+    .hamburger-icon {
+        margin: 0;
+        display: inline-block;
+        position: absolute;
+        top: 7px;
+        left: 2px;
+    }
+    
+    a.icon:hover span {
+        background-color: white;
+    }
+    
+    .hamburger-icon span {
+        width: 30px;
+        background-color: #ababab;
+        height: 5px;
+        display: block;
+        margin-bottom: 6px;
+    }
+    
+    .hamburger-number {
+        font-weight: bold;
+        margin-left: 35px;
+        color: orange;
+    }
 
     .sidemenu {
         display: none;
