--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -31,7 +31,7 @@
             <div class="card-header">
               Aktivität
             </div>
-            <div class="card-body" style="background-image: url('{% thumbnail activity.image 400x400 %}'); background-size: cover; background-position: center center">
+            <div class="card-body" style="background-image: url('http://localhost:8000/media/activities/Durak.jpg.400x400_q85.jpg'); background-size: cover; background-position: center center">
               Bild
             </div>
           </div>
