--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load thumbnail %}
+{% load account_tags %}
 
 <!doctype html>
 <html lang="en">
@@ -10,31 +11,66 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Solway">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Finger+Paint">
+    
     <title>myactivities.net</title>
     
     <style>
       html, body {
         height: 100%;
+        overflow: hidden;
+        font-family: "Solway";
       }
-      
-      .card {
-        min-height: 200px;
+      h1 {
+        font-size: 3rem;
+      }
+      .round-item {
+        border-radius: 40px;
+        margin-bottom: 10px;
       }
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="row h-25">
-        <div class="col-4 text-center"><!--style="background-image: url('{% thumbnail activity.image 400x400 %}'); background-size: cover; background-position: center center"-->
-          <div class="card">
-            <div class="card-header">
-              Aktivität
-            </div>
-            <div class="card-body" style="background-image: url('http://localhost:8000/media/activities/Durak.jpg.400x400_q85.jpg'); background-size: cover; background-position: center center">
-              Bild
-            </div>
-          </div>
+    <div class="container-fluid">
+      <div class="row vh-25 mt-2">
+        <div class="col-12 text-center h-50">
+          <h1>my<span style="font-family: 'Finger Paint'; font-size: 5rem; color: #7A9DBA">activities</span>.net</h1>
+        </div>
+        <hr class="w-75 mx-auto">
+      </div>
+      <div class="row">
+        <div class="col-12 text-center">
+          <h2>Determine your personality! Find people matching your character! Find activities you might enjoy!</
+        </div>
+      </div>
+      <div class="row vh-75" style="margin-top: 200px">
+        <div class="col-3 d-flex flex-column">
+          <img src="{% category_image 'Sports' %}" class="round-item">
+          <img src="{% activity_image 'Running' %}" class="round-item">
+          <img src="{% activity_image 'Swimming' %}" class="round-item">
+          <img src="{% activity_image 'Pool' %}" class="round-item">
+          <img src="{% activity_image 'Golf' %}" class="round-item">
+        </div>
+        <div class="col-3 d-flex flex-column">
+          <img src="{% category_image 'Chilling' %}" class="round-item">
+          <img src="{% activity_image 'Strolling' %}" class="round-item">
+          <img src="{% activity_image 'Yoga' %}" class="round-item">
+          <img src="{% activity_image 'Picnicking' %}" class="round-item">
+          <img src="{% activity_image 'Reading' %}" class="round-item">
+        </div>
+        <div class="col-3 d-flex flex-column">
+          <img src="{% category_image 'Card games' %}" class="round-item">
+          <img src="{% activity_image 'Poker' %}" class="round-item">
+          <img src="{% activity_image 'Skat' %}" class="round-item">
+          <img src="{% activity_image 'Durak' %}" class="round-item">
+        </div>
+        <div class="col-3 d-flex flex-column">
+          <img src="{% category_image 'Leisure' %}" class="round-item">
+          <img src="{% activity_image 'Gardening' %}" class="round-item">
+          <img src="{% activity_image 'Diving' %}" class="round-item">
+          <img src="{% activity_image 'Zoo' %}" class="round-item">
+          <img src="{% activity_image 'Knitting' %}" class="round-item">
         </div>
       </div>
     </div>
