Fixed trump issue game type

--- a/multiplayer/templates/multiplayer/rules.html
+++ b/multiplayer/templates/multiplayer/rules.html
@@ -17,7 +17,7 @@
         <h3><a href="https://de.wikipedia.org/wiki/Doppelkopf">Doppelkopf auf Wikipedia</a></h3>
         <ul>
             <li>Blatt: Mit/Ohne Neunen</li>
-            <li>Soli: Ohne Pflichtsolo. Solospieler kommt raus. Erstes angesagtes Solo zählt. Mit Fleischloser.</li>
+            <li>Soli: Mit Pflichtsoli und vorgeführten Pflichtsoli. Lustsolo kommt nicht raus, Pflichtsolo schon.</li>
             <li>Hochzeit: Erster fremde Stich.</li>
             <li>Sonderpunkte: Doppelkopf, Fuchs gefangen, Karlchen</li>
             <li>Ohne: Armut, Schweinchen, zweite Dulle sticht erste, Bockrunden, Karlchen gefangen</li>
