--- a/multiplayer/templates/multiplayer/game.html
+++ b/multiplayer/templates/multiplayer/game.html
@@ -91,6 +91,8 @@
         {% include 'javascript/doppelkopf.js' %}
     {% elif name == 'Poker' %}
         {% include 'javascript/poker.js' %}
+    {% elif name == 'Stiche raten' %}
+        {% include 'javascript/guess_the_tricks.js' %}
     {% endif %}
 {% endwith %}
 {% endblock %}
