--- a/multiplayer/templates/multiplayer/game.html
+++ b/multiplayer/templates/multiplayer/game.html
@@ -68,7 +68,7 @@
         <img src="{% static 'icons/lobby.png' %}">
         {% blocktrans %}Lobby{% endblocktrans %}
     </div>
-    <div class="left" style="width: 33%" onclick="showScore(true)">
+    <div class="left" style="width: 33%" onclick="showScore(true)" id="show-score-button">
         <img src="{% static 'icons/score.png' %}">
         {% trans 'Score' %}
     </div>
