--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -8,12 +8,17 @@
 {% block content %}
     {% if user.image %}<img src="{{ user.image.url }}" class="user-photo">{% endif %}
         <h1 class="h-img"><img src="{% static 'icons/home.png' %}">Home</h1>
-        <div class="info-p">
+    <div class="info-p">
 	<p>{% blocktrans with v0=user.username %}Willkommen, {{ v0 }}.{% endblocktrans %}
+    {% blocktrans %}Hier geht's direkt zu den Kartenspielen: {% endblocktrans %}
+    
+    {% include 'competitions/online_games.html' %}   
+    
         {% if not user.activities.exists %}
         <p>{% trans 'Da Sie noch keiner Aktivität beigetreten sind, müssen Sie wohl neu hier sein.<br><ul style="text-align: left;"><li>Oben links finden Sie das Dropdown-Menu. Über "Aktivitäten" und "Kategorien" können Sie sich anschauen, welche Aktivitäten es gibt und welche Ihnen vielleicht Spaß machen könnten.</li><li>Die Kartenspiele Durak, Skat, Doppelkopf und Poker können Sie <a href="/competitions/user_overview">gleich hier online spielen</a>.</li><li>Wenn Sie herausfinden wollen, welche Aktivitäten zu Ihnen passen, gibt es auch einen <a href="/character/overview">Persönlichkeitstest für Sie</a>.</li></ul>' %}</p>
         {% endif %}
     </p>
+    <p>{% blocktrans %}Hier geht's zum Persönlichkeitstest und ihren Posts:{% endblocktrans %}</p>
     <div class="button-like" style="margin-bottom: 10px; margin-top: 10px" onclick=openLink("{% url 'character:overview' %}")>
         <img src="{% static 'icons/questionnaire.png' %}">
         {% trans 'Persönlichkeitstest & Empfehlungen' %}
