change login title

--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -4,7 +4,7 @@
 {% load cookielaw_tags %}
 {% load account_tags %}
 
-{% block title %}{% trans "Einloggen" %}{% endblock %}
+{% block title %}{% trans "Einloggen - myactivities.net" %}{% endblock %}
 
 {% block content %}
     <div class="center-container">
